[package]
name = "ChrisWindowsDriverSec"
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
thiserror = "1.0"
winreg = "0.10"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus"
]



[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"